# -MCP-mqtt-EdgeX-Ekuiper-

./: .gitignore  README.md  comprehensive_system_test.py  requirements.txt  setup_environment.sh  start_intelligent_classroom_v2.sh  start_mcp_server.sh  start_temperature_control_v2.sh  stop_intelligent_classroom.sh  stop_temperature_control.sh
EdgeX_mqtt/: README.md  docker-compose.yml  test_ac_control.py  test_ac_status.py
EdgeX_mqtt/config/: classroom-device-profile.yaml  classroom-devices.toml  mqtt_source.yaml
EdgeX_mqtt/docs/: AC_CONTROL_RULES.md  AC_STATUS_ARCHITECTURE.md  EKUIPER_EMQX_CLOUD_FIX.md  EMQX_CLOUD_CONFIG.md
EdgeX_mqtt/rules/: ac_power_control.json  ac_power_status.json  ac_temp_status.json  ac_temperature_control.json  create_ac_control_stream.json  create_classroom_stream.json  humidity_forward.json  simple_data_forward.json
EdgeX_mqtt/scripts/: check_system_status.sh  init_ekuiper_rules.sh
emqx-mcp-server-main/: .env.example  .gitignore  Dockerfile  README.md  README_previous.md  pyproject.toml  smithery.yaml
emqx-mcp-server-main/config/: claude_desktop_config_temperature_control.json
emqx-mcp-server-main/src/emqx_mcp_server/: __init__.py  __main__.py  config.py  emqx_client.py  mqtt_base.py  server.py
emqx-mcp-server-main/src/emqx_mcp_server/tools/: emqx_client_tools.py  emqx_message_tools.py  emqx_subscription_tools.py  smart_classroom_tools.py  temperature_control_tools.py
emqx-mcp-server-main/tests/: test_server.py
